--- a/threecolumn.html
+++ b/threecolumn.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Three Column - Halcyonic by HTML5 UP</title>
+		<title>Stats - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,15 +23,15 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">Halcyonic</a></h1>
+									<h1><a href="#" id="logo">Goal.org</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="threecolumn.html">Stats</a>
+										<a href="twocolumn1.html">Tables</a>
+										<a href="twocolumn2.html">News</a>
+										<a href="onecolumn.html">Scores</a>
 									</nav>
 
 							</div>
@@ -81,8 +81,8 @@
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>Three Column</h2>
-												<h3>A generic three column layout</h3>
+												<h2>Stats</h2>
+												<h3>Click on the Players below to look at their statistics from this season.</h3>
 											</header>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
