Added Twitter Feed in Stats Section, Fixed some text in the other columns.

--- a/threecolumn.html
+++ b/threecolumn.html
@@ -64,7 +64,7 @@
 										</section>
 										<section>
 											<header>
-												<h2>Magna Phasellus</h2>
+												<h2>ADD SOMETHING</h2>
 											</header>
 											<ul class="link-list">
 												<li><a href="#">Sed dolore viverra</a></li>
@@ -119,15 +119,10 @@
 									<!-- Right Sidebar -->
 										<section>
 											<header>
-												<h2>Magna Phasellus</h2>
+												<h2>Twitter Feed</h2>
 											</header>
-											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Nec sociis natoque</a></li>
-												<li><a href="#">Penatibus et magnis</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
+											<a class="twitter-timeline" href="https://twitter.com/LnBnA_FUT/lists/website" data-widget-id="699068243848237056">Tweets from https://twitter.com/LnBnA_FUT/lists/website</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 											</ul>
 										</section>
 										<section>
