--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Two Column 1 - Halcyonic by HTML5 UP</title>
+		<title>Tables - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,10 +28,10 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="threecolumn.html">Stats</a>
+										<a href="twocolumn1.html">Tables</a>
+										<a href="twocolumn2.html">News</a>
+										<a href="onecolumn.html">Scores</a>
 									</nav>
 
 							</div>
@@ -49,8 +49,8 @@
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>Two Column #1</h2>
-												<h3>A generic two column layout</h3>
+												<h2>CL and League Tables</h2>
+												<h3>Scroll Down to see the tables from this season</h3>
 											</header>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
