Cleaned up Messi profile and fixed links to other pages in Messi Profile

--- a/News.html
+++ b/News.html
@@ -28,10 +28,10 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Stats</a>
-										<a href="twocolumn1.html">Tables</a>
-										<a href="twocolumn2.html">News</a>
-										<a href="onecolumn.html">Scores</a>
+										<a href="Stats.html">Stats</a>
+										<a href="Tables.html">Tables</a>
+										<a href="News.html">News</a>
+										<a href="Scores.html">Scores</a>
 									</nav>
 
 							</div>
