--- a/Scores.html
+++ b/Scores.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tables - Goal.org</title>
+		<title>Scores - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,15 +23,15 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">Halcyonic</a></h1>
+									<h1><a href="#" id="logo">Goal.org</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Stats</a>
-										<a href="twocolumn1.html">Tables</a>
-										<a href="twocolumn2.html">News</a>
-										<a href="onecolumn.html">Scores</a>
+										<a href="Stats.html">Stats</a>
+										<a href="Tables.html">Tables</a>
+										<a href="News.html">News</a>
+										<a href="Scores.html">Scores</a>
 									</nav>
 
 							</div>
@@ -44,13 +44,13 @@
 					<div id="content">
 						<div class="container">
 							<div class="row">
-								<div class="9u 12u(mobile)">
+								<div class="12u">
 
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>CL and League Tables</h2>
-												<h3>Scroll Down to see the tables from this season</h3>
+												<h2>One Column</h2>
+												<h3>A generic one column layout</h3>
 											</header>
 											<p>
 												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
@@ -98,39 +98,6 @@
 												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
 												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
 											</p>
-										</section>
-
-								</div>
-								<div class="3u 12u(mobile)">
-
-									<!-- Sidebar -->
-										<section>
-											<header>
-												<h2>Magna Phasellus</h2>
-											</header>
-											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Nec sociis natoque</a></li>
-												<li><a href="#">Penatibus et magnis</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
-											</ul>
-										</section>
-										<section>
-											<header>
-												<h2>Ipsum Dolor</h2>
-											</header>
-											<p>
-												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
-											</p>
-											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
-											</ul>
 										</section>
 
 								</div>
