--- a/Stats.html
+++ b/Stats.html
@@ -28,10 +28,10 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Stats</a>
-										<a href="twocolumn1.html">Tables</a>
-										<a href="twocolumn2.html">News</a>
-										<a href="onecolumn.html">Scores</a>
+										<a href="Stats.html">Stats</a>
+										<a href="Tables.html">Tables</a>
+										<a href="News.html">News</a>
+										<a href="Scores.html">Scores</a>
 									</nav>
 
 							</div>
@@ -49,30 +49,29 @@
 									<!-- Left Sidebar -->
 										<section>
 											<header>
-												<h2>Ipsum Dolor</h2>
+												<h2>Monthly Top 4</h2>
 											</header>
 											<p>
-												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+												Below you will find the top 4 players who played the best for last month. This list is mostly based on FIFA 16 In-Form cards, which are the best players of that week.
 											</p>
 											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
+												<li><a href="#">Lionel Messi</a></li>
+												<li><a href="#">Cristiano Ronaldo</a></li>
+												<li><a href="#">Robert Lewandowski</a></li>
+												<li><a href="#">Thomas Muller</a></li>
 											</ul>
 										</section>
 										<section>
 											<header>
-												<h2>ADD SOMETHING</h2>
+												<h2>Top 6 Teams</h2>
 											</header>
 											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Nec sociis natoque</a></li>
-												<li><a href="#">Penatibus et magnis</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
+												<li><a href="#">FC Barcelona</a></li>
+												<li><a href="#">FC Bayern Munich</a></li>
+												<li><a href="#">Real Madrid</a></li>
+												<li><a href="#">Juventus</a></li>
+												<li><a href="#">Leicester City</a></li>
+												<li><a href="#">Paris Saint-Germain</a></li>
 											</ul>
 										</section>
 								</div>
@@ -84,14 +83,7 @@
 												<h2>Stats</h2>
 												<h3>Click on the Players below to look at their statistics from this season.</h3>
 											</header>
-											<p>
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-												vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-												eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-												lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-												sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-												varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-											</p>
+											<li><a href="Messi Profile.html">Lionel Messi</a></li>
 											<p>
 												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
 												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
@@ -127,17 +119,16 @@
 										</section>
 										<section>
 											<header>
-												<h2>Ipsum Dolor</h2>
+												<h2>Top 4 Goals</h2>
 											</header>
 											<p>
-												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+												This Top 4 goals list is updated whenever there is a very good goal scored by any player in any league.
 											</p>
 											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
+												<li><a href="#">Ibrahimovic Bicycle</a></li>
+												<li><a href="#">Florenzi Half-Pitch Goal</a></li>
+												<li><a href="#">Napoli 1-2 Best Play</a></li>
+												<li><a href="#">Messi dribbles all of Real</a></li>
 											</ul>
 										</section>
 
