--- a/Tables.html
+++ b/Tables.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Scores - Goal.org</title>
+		<title>Tables - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,15 +23,15 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">Goal.org</a></h1>
+									<h1><a href="#" id="logo">Halcyonic</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="Stats.html">Stats</a>
+										<a href="Tables.html">Tables</a>
+										<a href="News.html">News</a>
+										<a href="Scores.html">Scores</a>
 									</nav>
 
 							</div>
@@ -44,60 +44,86 @@
 					<div id="content">
 						<div class="container">
 							<div class="row">
-								<div class="12u">
+								<div class="9u 12u(mobile)">
 
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>One Column</h2>
-												<h3>A generic one column layout</h3>
+												<h2>CL and League Tables</h2>
+												<h3>Scroll Down to see the tables from this season</h3>
+											</header>
+											
+											<p>
+												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
+												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
+												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
+												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
+												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
+												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
+												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
+												hendrerit.
+											</p>
+											<p>
+												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
+												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
+												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
+												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
+												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+											</p>
+											<p>
+												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
+												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
+												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
+												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
+												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
+												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
+												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
+												hendrerit.
+											</p>
+											<p>
+												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
+												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
+												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
+												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
+												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+											</p>
+										</section>
+
+								</div>
+								<div class="3u 12u(mobile)">
+
+									<!-- Sidebar -->
+										<section>
+											<header>
+												<h2>Magna Phasellus</h2>
+											</header>
+											<ul class="link-list">
+												<li><a href="#">Sed dolore viverra</a></li>
+												<li><a href="#">Ligula non varius</a></li>
+												<li><a href="#">Nec sociis natoque</a></li>
+												<li><a href="#">Penatibus et magnis</a></li>
+												<li><a href="#">Dis parturient montes</a></li>
+												<li><a href="#">Nascetur ridiculus</a></li>
+											</ul>
+										</section>
+										<section>
+											<header>
+												<h2>Ipsum Dolor</h2>
 											</header>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-												vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-												eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-												lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-												sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-												varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
+												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
 											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
+											<ul class="link-list">
+												<li><a href="#">Sed dolore viverra</a></li>
+												<li><a href="#">Ligula non varius</a></li>
+												<li><a href="#">Dis parturient montes</a></li>
+												<li><a href="#">Nascetur ridiculus</a></li>
+											</ul>
 										</section>
 
 								</div>
