--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Stats</a>
-										<a href="twocolumn1.html">Tables</a>
-										<a href="twocolumn2.html">News</a>
-										<a href="onecolumn.html">Scores</a>
+										<a href="Stats.html">Stats</a>
+										<a href="Tables.html">Tables</a>
+										<a href="News.html">News</a>
+										<a href="Scores.html">Scores</a>
 									</nav>
 
 							</div>
@@ -130,14 +130,12 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<h2>Who We Are</h2>
-												<h3>A subheading about who we are</h3>
+												<h2>What is Goal.org</h2>
+												<h3>Stats, news and scores updated daily</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-												Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-												justo facilisis quis. Sed sagittis mauris amet tellus gravida lorem ipsum.
+												Goal.org is a website that shows all of the latest stats, news and scores from the Bundesliga, EPL and Liga BBVA. It also has all of the newest boots released, player news and live scores.
 											</p>
 										</section>
 
@@ -147,15 +145,15 @@
 									<!-- Box #2 -->
 										<section>
 											<header>
-												<h2>What We Do</h2>
-												<h3>A subheading about what we do</h3>
+												<h2>Why does it exist?</h2>
+												<h3>Goal.org is simply a school project that keeps being updated</h3>
 											</header>
 											<ul class="check-list">
-												<li>Sed mattis quis rutrum accum</li>
-												<li>Eu varius nibh suspendisse lorem</li>
-												<li>Magna eget odio amet mollis justo</li>
-												<li>Facilisis quis sagittis mauris</li>
-												<li>Amet tellus gravida lorem ipsum</li>
+												<li>Daily Updates</li>
+												<li>Live Football Scores</li>
+												<li>Seasonal Player Stats</li>
+												<li>Latest Player, Game and Boot News</li>
+												<li>Live Twitter Feed!</li>
 											</ul>
 										</section>
 
