--- a/Vardy Profile.html
+++ b/Vardy Profile.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lionel Messi - Goal.org</title>
+		<title>Jamie Vardy - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -80,10 +80,10 @@
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>Lionel Messi</h2>
+												<h2>Jamie Vardy</h2>
 											</header>
 											<p>
-												Lionel Messi has played outstandly well the last few games, and the rest of the early season. He has played a massive role in helping Barcelona get their huge winning streak, having not lost a game in a very long time. He has done so much for his club this season, and is currently the world's best player in FIFA 16 and in real life.
+												Ever since Leicester City F.C. unexpectedley topped the Premier League tables, Jamie Vardy has had the spotlight on his dazzling skills, shot and pace. He is an unlikely striker, who, just 2 years earlier, was playing with Leicester City in Division 3. He has done a very good job of helping his team to the top, and has broken the all-time Premier League record for 11 goals in 11 games. 
 											</p>
 											
 										</section>
@@ -126,8 +126,62 @@
 					<footer id="footer" class="container">
 						<div class="row">
 							<div class="8u 12u(mobile)">
+
+								<!-- Links -->
+									<section>
+										<h2>Links to Important Stuff</h2>
+										<div>
+											<div class="row">
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</section>
+
 							</div>
 							<div class="4u 12u(mobile)">
+
+								<!-- Blurb -->
+									<section>
+										<h2>An Informative Text Blurb</h2>
+										<p>
+											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
+											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
+											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
+											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
+										</p>
+									</section>
+
 							</div>
 						</div>
 					</footer>
