--- a/Messi Boots.html
+++ b/Messi Boots.html
@@ -80,10 +80,10 @@
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>Lionel Messi</h2>
+												<h2>Adidas Messi 15.1</h2>
 											</header>
 											<p>
-												Lionel Messi has played outstandly well the last few games, and the rest of the early season. He has played a massive role in helping Barcelona get their huge winning streak, having not lost a game in a very long time. He has done so much for his club this season, and is currently the world's best player in FIFA 16 and in real life.
+												Messi uses the Adidas Messi 15.1 boots, a very good line of boot for strikers. If you want more information, go to www.adidas.com/messi
 											</p>
 											
 										</section>
