--- a/News.html
+++ b/News.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>News - Goal.org</title>
+		<title>Boots - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -30,7 +30,7 @@
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
 										<a href="Tables.html">Tables</a>
-										<a href="News.html">News</a>
+										<a href="News.html">Boots</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -46,91 +46,73 @@
 							<div class="row">
 								<div class="3u 12u(mobile)">
 
-									<!-- Sidebar -->
+									<!-- Left Sidebar -->
 										<section>
 											<header>
-												<h2>Magna Phasellus</h2>
-											</header>
-											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Nec sociis natoque</a></li>
-												<li><a href="#">Penatibus et magnis</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
-											</ul>
-										</section>
-										<section>
-											<header>
-												<h2>Ipsum Dolor</h2>
+												<h2>Monthly Top 4</h2>
 											</header>
 											<p>
-												Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat.
+												Below you will find the top 4 players who played the best for last month. This list is mostly based on FIFA 16 In-Form cards, which are the best players of that week.
 											</p>
 											<ul class="link-list">
-												<li><a href="#">Sed dolore viverra</a></li>
-												<li><a href="#">Ligula non varius</a></li>
-												<li><a href="#">Dis parturient montes</a></li>
-												<li><a href="#">Nascetur ridiculus</a></li>
+												<li><a href="#">Lionel Messi</a></li>
+												<li><a href="#">Cristiano Ronaldo</a></li>
+												<li><a href="#">Robert Lewandowski</a></li>
+												<li><a href="#">Thomas Muller</a></li>
 											</ul>
 										</section>
-
+										<section>
+											<header>
+												<h2>Top 6 Teams</h2>
+											</header>
+											<ul class="link-list">
+												<li><a href="#">FC Barcelona</a></li>
+												<li><a href="#">FC Bayern Munich</a></li>
+												<li><a href="#">Real Madrid</a></li>
+												<li><a href="#">Juventus</a></li>
+												<li><a href="#">Leicester City</a></li>
+												<li><a href="#">Paris Saint-Germain</a></li>
+											</ul>
+										</section>
 								</div>
-								<div class="9u 12u(mobile) important(mobile)">
+								<div class="6u 12u(mobile) important(mobile)">
 
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>News - Teams, Players, Boots and More!</h2>
-												<h3>Scroll Down to view different news from earlier</h3>
+												<h2>Boots by player</h2>
+												<h3>Below are the top 3 players in the world and their boots</h3>
+											</header>
+											<li><a href="Messi Boots.html">Lionel Messi</a></li>
+											<li><a href="Neymar Boots.html">Neymar</a></li>
+    										<li><a href="Ozil Boots.html">Ozil</a></li>
+										</section>
+
+								</div>
+								<div class="3u 12u(mobile)">
+
+									<!-- Right Sidebar -->
+										<section>
+											<header>
+												<h2>Twitter Feed</h2>
+											</header>
+											<a class="twitter-timeline" href="https://twitter.com/LnBnA_FUT/lists/website" data-widget-id="699068243848237056">Tweets from https://twitter.com/LnBnA_FUT/lists/website</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+											</ul>
+										</section>
+										<section>
+											<header>
+												<h2>Top 4 Goals</h2>
 											</header>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-												vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-												eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-												lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-												sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-												varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+												This Top 4 goals list is updated whenever there is a very good goal scored by any player in any league.
 											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
+											<ul class="link-list">
+												<li><a href="#">Ibrahimovic Bicycle</a></li>
+												<li><a href="#">Florenzi Half-Pitch Goal</a></li>
+												<li><a href="#">Napoli 1-2 Best Play</a></li>
+												<li><a href="#">Messi dribbles all of Real</a></li>
+											</ul>
 										</section>
 
 								</div>
@@ -145,60 +127,10 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
 
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
 
 							</div>
 						</div>
@@ -207,7 +139,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Goal.org. All rights reserved. | Design: <a>Luc Baldwin</a>
 				</div>
 
 		</div>
