--- a/Scores.html
+++ b/Scores.html
@@ -30,7 +30,7 @@
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
 										<a href="Tables.html">Tables</a>
-										<a href="News.html">News</a>
+										<a href="News.html">Boots</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -49,54 +49,34 @@
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>One Column</h2>
-												<h3>A generic one column layout</h3>
+												<h2>Latest Scores</h2>
+												<h3>Below are all of the scores of the UEFA Champion's League Round of 16</h3>
 											</header>
 											<p>
-												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue
-												vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat
-												eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis
-												lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero,
-												sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie
-												varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
-											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
+											<li>
+												Manchester City 3-1 Dynamo Kyiv
+												</li>
+												<li>
+													PSV 0-0 Atletico
+												</li>
+												<li>
+													Juventus 2-2 Bayern Munich
+												</li>
+												<li>
+													Barcelona 2-0 Arsenal
+												</li>
+												<li>
+													Real Madrid 2-0 Roma
+												</li>
+												<li>
+													Wolfsburg 3-2 Gent
+												</li>
+												<li>
+													Benfica 1-0 Zenit
+												</li>
+												<li>
+													PSG 2-1 Chelsea
+												</li>
 											</p>
 										</section>
 
@@ -112,60 +92,10 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
 
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
 
 							</div>
 						</div>
@@ -174,7 +104,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Goal.org. All rights reserved. | Design: <a>Luc Baldwin</a>
 				</div>
 
 		</div>
