--- a/Stats.html
+++ b/Stats.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stats - Goal.org</title>
+		<title>Tables - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -30,7 +30,7 @@
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
 										<a href="Tables.html">Tables</a>
-										<a href="News.html">News</a>
+										<a href="News.html">Boots</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -81,28 +81,12 @@
 										<section>
 											<header>
 												<h2>Stats</h2>
-												<h3>Click on the Players below to look at their statistics from this season.</h3>
+												<h3>Below are the top 3 players of the 2015/16 season</h3>
 											</header>
 											<li><a href="Messi Profile.html">Lionel Messi</a></li>
-											<p>
-												Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum
-												hendrerit congue nec eu risus. Cum sociis natoque penatibus et magnis dis parturient
-												montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												elit. Suspendisse fermentum adipiscing nisi, a tempor libero malesuada at. Morbi
-												lacinia dui adipiscing risus eleifend tincidunt. Proin eu mauris eu tellus eleifend
-												hendrerit.
-											</p>
-											<p>
-												Mauris sit amet tellus urna. In facilisis, tortor vitae ultricies egestas, odio
-												mi rhoncus arcu, quis euismod felis felis et velit. Mauris varius consectetur erat
-												egestas tempus. Cras convallis odio sit amet risus convallis porttitor. Integer
-												vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam
-												justo imperdiet vel. Proin nec dictum mi. Duis commodo enim non tellus interdum
-												iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat dui auctor.
-											</p>
+											<li><a href="Neymar Profile.html">Neymar</a>
+											</li>
+											<li><a href="Vardy Profile.html">Jamie Vardy</a></li>
 										</section>
 
 								</div>
@@ -144,61 +128,9 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
 
 							</div>
 							<div class="4u 12u(mobile)">
-
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
-
 							</div>
 						</div>
 					</footer>
@@ -206,7 +138,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Goal.org. All rights reserved. | Design: <a>Luc Baldwin</a>
 				</div>
 
 		</div>
