--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
 										<a href="Tables.html">Tables</a>
-										<a href="News.html">News</a>
+										<a href="News.html">Boots</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -96,9 +96,9 @@
 											<a href="#" class="bordered-feature-image">
 											<img src="http://4.bp.blogspot.com/-w--tXWSAIvM/Vq8j2rTkVSI/AAAAAAAA3as/bF1bfyFgwfA/s738/Nike-Liquid-Shift-Pack%2B%25284%2529.jpg" style="width:260px;height:142px;">
 											</a>
-											<h2>Nike Liquid Shift Pack</h2>
+											<h2>Nike Metal Flash Pack</h2>
 											<p>
-												Details, images and the long-awaited release date of the Nike Liquid Shift Pack - their first boot pack of 2016.
+												Details, images and the long-awaited release date of the Nike Metal Flash Pack - their first boot pack of 2016.
 											</p>
 										</section>
 
@@ -164,23 +164,23 @@
 										<section>
 											<header>
 												<h2>What People Are Saying</h2>
-												<h3>And a final subheading about our clients</h3>
+												<h3>Random info from my good friends</h3>
 											</header>
 											<ul class="quote-list">
 												<li>
 													<img src="images/pic06.jpg" alt="" />
-													<p>"Neque nisidapibus mattis"</p>
-													<span>Jane Doe, CEO of UntitledCorp</span>
+													<p>"10/10 would visit"</p>
+													<span>Leonardo DiCaprio, Actor</span>
 												</li>
 												<li>
 													<img src="images/pic07.jpg" alt="" />
-													<p>"Lorem ipsum consequat!"</p>
-													<span>John Doe, President of FakeBiz</span>
+													<p>"I use this everyday!"</p>
+													<span>Lionel Messi, Footballer</span>
 												</li>
 												<li>
 													<img src="images/pic08.jpg" alt="" />
-													<p>"Magna veroeros amet tempus"</p>
-													<span>Mary Smith, CFO of UntitledBiz</span>
+													<p>"I'm forgetting my job and using goal.org 24/7 now!"</p>
+													<span>Barrack Obama, United States President</span>
 												</li>
 											</ul>
 										</section>
@@ -196,62 +196,6 @@
 					<footer id="footer" class="container">
 						<div class="row">
 							<div class="8u 12u(mobile)">
-
-								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="3u 12u(mobile)">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
-							<div class="4u 12u(mobile)">
-
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
-
 							</div>
 						</div>
 					</footer>
@@ -259,7 +203,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Goal.org. All rights reserved. | Design: <a>Luc Baldwin</a>
 				</div>
 
 		</div>
