--- a/News.html
+++ b/News.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Boots - Goal.org</title>
+		<title>Videos - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,8 +29,8 @@
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
-										<a href="Tables.html">Tables</a>
-										<a href="News.html">Boots</a>
+										<a href="Tables.html">Rankings</a>
+										<a href="News.html">Videos</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -44,75 +44,18 @@
 					<div id="content">
 						<div class="container">
 							<div class="row">
-								<div class="3u 12u(mobile)">
-
-									<!-- Left Sidebar -->
-										<section>
-											<header>
-												<h2>Monthly Top 4</h2>
-											</header>
-											<p>
-												Below you will find the top 4 players who played the best for last month. This list is mostly based on FIFA 16 In-Form cards, which are the best players of that week.
-											</p>
-											<ul class="link-list">
-												<li><a href="#">Lionel Messi</a></li>
-												<li><a href="#">Cristiano Ronaldo</a></li>
-												<li><a href="#">Robert Lewandowski</a></li>
-												<li><a href="#">Thomas Muller</a></li>
-											</ul>
-										</section>
-										<section>
-											<header>
-												<h2>Top 6 Teams</h2>
-											</header>
-											<ul class="link-list">
-												<li><a href="#">FC Barcelona</a></li>
-												<li><a href="#">FC Bayern Munich</a></li>
-												<li><a href="#">Real Madrid</a></li>
-												<li><a href="#">Juventus</a></li>
-												<li><a href="#">Leicester City</a></li>
-												<li><a href="#">Paris Saint-Germain</a></li>
-											</ul>
-										</section>
-								</div>
-								<div class="6u 12u(mobile) important(mobile)">
+								<div class="12u">
 
 									<!-- Main Content -->
 										<section>
 											<header>
-												<h2>Boots by player</h2>
-												<h3>Below are the top 3 players in the world and their boots</h3>
+												<h2>Videos</h2>
+												<h3>The latest football videos from fifa.com</h3>
 											</header>
-											<li><a href="Messi Boots.html">Lionel Messi</a></li>
-											<li><a href="Neymar Boots.html">Neymar</a></li>
-    										<li><a href="Ozil Boots.html">Ozil</a></li>
-										</section>
-
-								</div>
-								<div class="3u 12u(mobile)">
-
-									<!-- Right Sidebar -->
-										<section>
-											<header>
-												<h2>Twitter Feed</h2>
-											</header>
-											<a class="twitter-timeline" href="https://twitter.com/LnBnA_FUT/lists/website" data-widget-id="699068243848237056">Tweets from https://twitter.com/LnBnA_FUT/lists/website</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-											</ul>
-										</section>
-										<section>
-											<header>
-												<h2>Top 4 Goals</h2>
-											</header>
-											<p>
-												This Top 4 goals list is updated whenever there is a very good goal scored by any player in any league.
-											</p>
-											<ul class="link-list">
-												<li><a href="#">Ibrahimovic Bicycle</a></li>
-												<li><a href="#">Florenzi Half-Pitch Goal</a></li>
-												<li><a href="#">Napoli 1-2 Best Play</a></li>
-												<li><a href="#">Messi dribbles all of Real</a></li>
-											</ul>
+											<iframe src="http://www.fifa.com/videos/" width="1150px" height="1000">
+												
+											</iframe>
+											
 										</section>
 
 								</div>
