--- a/Scores.html
+++ b/Scores.html
@@ -29,8 +29,8 @@
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
-										<a href="Tables.html">Tables</a>
-										<a href="News.html">Boots</a>
+										<a href="Tables.html">Rankings</a>
+										<a href="News.html">Videos</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -50,34 +50,12 @@
 										<section>
 											<header>
 												<h2>Latest Scores</h2>
-												<h3>Below are all of the scores of the UEFA Champion's League Round of 16</h3>
+												<h3>All of the latest football scores from espnfc.com</h3>
 											</header>
-											<p>
-											<li>
-												Manchester City 3-1 Dynamo Kyiv
-												</li>
-												<li>
-													PSV 0-0 Atletico
-												</li>
-												<li>
-													Juventus 2-2 Bayern Munich
-												</li>
-												<li>
-													Barcelona 2-0 Arsenal
-												</li>
-												<li>
-													Real Madrid 2-0 Roma
-												</li>
-												<li>
-													Wolfsburg 3-2 Gent
-												</li>
-												<li>
-													Benfica 1-0 Zenit
-												</li>
-												<li>
-													PSG 2-1 Chelsea
-												</li>
-											</p>
+											<iframe src="http://www.espnfc.us/scores" width="1150px" height="1000">
+												
+											</iframe>
+											
 										</section>
 
 								</div>
