--- a/Stats.html
+++ b/Stats.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tables - Goal.org</title>
+		<title>Stats - Goal.org</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,8 +29,8 @@
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
-										<a href="Tables.html">Tables</a>
-										<a href="News.html">Boots</a>
+										<a href="Tables.html">Rankings</a>
+										<a href="News.html">Videos</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
