--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
-										<a href="Tables.html">Tables</a>
-										<a href="News.html">Boots</a>
+										<a href="Tables.html">Rankings</a>
+										<a href="News.html">Videos</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
@@ -120,86 +120,6 @@
 					</div>
 				</div>
 
-			<!-- Content -->
-				<div id="content-wrapper">
-					<div id="content">
-						<div class="container">
-							<div class="row">
-								<div class="4u 12u(mobile)">
-
-									<!-- Box #1 -->
-										<section>
-											<header>
-												<h2>What is Goal.org</h2>
-												<h3>Stats, news and scores updated daily</h3>
-											</header>
-											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
-											<p>
-												Goal.org is a website that shows all of the latest stats, news and scores from the Bundesliga, EPL and Liga BBVA. It also has all of the newest boots released, player news and live scores.
-											</p>
-										</section>
-
-								</div>
-								<div class="4u 12u(mobile)">
-
-									<!-- Box #2 -->
-										<section>
-											<header>
-												<h2>Why does it exist?</h2>
-												<h3>Goal.org is simply a school project that keeps being updated</h3>
-											</header>
-											<ul class="check-list">
-												<li>Daily Updates</li>
-												<li>Live Football Scores</li>
-												<li>Seasonal Player Stats</li>
-												<li>Latest Player, Game and Boot News</li>
-												<li>Live Twitter Feed!</li>
-											</ul>
-										</section>
-
-								</div>
-								<div class="4u 12u(mobile)">
-
-									<!-- Box #3 -->
-										<section>
-											<header>
-												<h2>What People Are Saying</h2>
-												<h3>Random info from my good friends</h3>
-											</header>
-											<ul class="quote-list">
-												<li>
-													<img src="images/pic06.jpg" alt="" />
-													<p>"10/10 would visit"</p>
-													<span>Leonardo DiCaprio, Actor</span>
-												</li>
-												<li>
-													<img src="images/pic07.jpg" alt="" />
-													<p>"I use this everyday!"</p>
-													<span>Lionel Messi, Footballer</span>
-												</li>
-												<li>
-													<img src="images/pic08.jpg" alt="" />
-													<p>"I'm forgetting my job and using goal.org 24/7 now!"</p>
-													<span>Barrack Obama, United States President</span>
-												</li>
-											</ul>
-										</section>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<footer id="footer" class="container">
-						<div class="row">
-							<div class="8u 12u(mobile)">
-							</div>
-						</div>
-					</footer>
-				</div>
 
 			<!-- Copyright -->
 				<div id="copyright">
