--- a/Tables.html
+++ b/Tables.html
@@ -29,8 +29,8 @@
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
 										<a href="Stats.html">Stats</a>
-										<a href="Tables.html">Tables</a>
-										<a href="News.html">Boots</a>
+										<a href="Tables.html">Rankings</a>
+										<a href="News.html">Videos</a>
 										<a href="Scores.html">Scores</a>
 									</nav>
 
